# ca4sc

./: README.scd  index.html  params.json  test.scd
.svn/: entries
HelpSource/Classes/: CA1.schelp  CA1x.schelp  CA2.schelp  CA2x.schelp  CAUGen.schelp  Pca.schelp  Pca1.schelp  Pca2.schelp
classes/: Pca.sc  ca.sc
help/: CA0.rtf  CA0x.rtf  CA1.rtf  CA1L.rtf  CA1x.rtf  CA2.rtf  CA2L.rtf  CA2x.rtf  Pca1.rtf  Pca2.rtf
plugins/: CAUGens.cpp  CAUGens.scx  CMakeCache.txt  Makefile  cmake_install.cmake
src/: CAUGens.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
